# pyohio-freight-parser-demo

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: retrain.yml
data/: README.md
data/seed/: build_seed.py  confirmations.jsonl
docs/: RUNNING_ON_GPU.md
scripts/: demo.py  retrain.py  serve_gpu.sh
