# freight-parser — uv workspace root
#
# This is a *virtual* project (no [build-system]): uv installs its dependencies
# and every workspace member into one shared environment, but never tries to
# build/publish the root itself. `uv sync` from here gives you a single venv
# with all five stage packages importable and editable.
#
# Everything is pinned to CPU-only, laptop-friendly libraries. The one network
# touch is the first-run model download from Hugging Face (see .env.example).
[project]
name = "freight-parser"
version = "0.1.0"
description = "Self-hosted, fine-tuned LLM for freight shipment-confirmation parsing — a runs-on-a-laptop reference pipeline."
readme = "README.md"
requires-python = "==3.11.*"

# The root pulls in every workspace package so a single `uv sync` wires up the
# whole monorepo. Source resolution for these names is defined in
# [tool.uv.sources] below (they resolve to the local packages/, not PyPI).
dependencies = [
    "freight-schema",
    "freight-qa-portal",
    "freight-synthetic",
    "freight-finetune",
    "freight-eval",
    "freight-serving",
]

[dependency-groups]
# Dev-only tooling, installed by `uv sync` but not required to *run* the demo.
dev = [
    "pytest>=8.0",
    "httpx>=0.27",        # FastAPI TestClient + serving smoke tests
    "ruff>=0.6",          # `make fmt`
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
freight-schema = { workspace = true }
freight-qa-portal = { workspace = true }
freight-synthetic = { workspace = true }
freight-finetune = { workspace = true }
freight-eval = { workspace = true }
freight-serving = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["data", "*.ipynb"]

[tool.pytest.ini_options]
# Each package ships its own tests/ dir; collect them all from the root.
testpaths = ["packages"]
addopts = "-q"
